spacing issue corrected

--- a/src/components/Board/Board.css
+++ b/src/components/Board/Board.css
@@ -2,5 +2,5 @@
     width: 100%; 
     margin-left: auto; 
     margin-right: auto; 
-    margin-top: 5px; 
+    border-top: 5px solid rgb(92, 92, 92); 
 }
